test-1 add more tests, fix warnings and change version of mockk library